--- a/zinnen.html
+++ b/zinnen.html
@@ -51,6 +51,7 @@
     <p style="color: #fcf1a4; font-size: 1.5rem;" onclick="copyText(this)">Due to the geometry of the object, limited accessibility and/or radiation safety, Se75 used instead of X-ray.</p>
     <p style="color: #f7e672; font-size: 1.5rem;" onclick="copyText(this)">Due to limited accessibility, the IQI is placed perpendicular to the weld</p>
     <p style="color: #fcf1a4; font-size: 1.5rem;" onclick="copyText(this)">2 films (D5 & D7) per exposure used to have a larger range in density because of the difference in wall thickness.</p>
+    <p style="color: #f7e672; font-size: 1.5rem;" onclick="copyText(this)">Examination limited because of the geometry of the object.</p>
 
 </body>
 </html>
