--- a/test.html
+++ b/test.html
@@ -237,10 +237,6 @@
     function curvedBeamSizeAlways(angleDeg, diameter, ffd) {
         const alpha = angleDeg * Math.PI / 180; // Hele bundelhoek in radialen
         const sinHalfAlpha = Math.sin(alpha / 2);
-        // De term (diameter - 2 * ffd) / diameter bepaalt de positie van de bron
-        // tov het midden en de richting van de bundel.
-        // Als FFD = R + d (bron L op d van O, bundel naar verste wand), dan is (2R - 2(R+d))/2R = -d/R
-        // Als FFD = R - d (bron L op d van O, bundel naar dichtste wand), dan is (2R - 2(R-d))/2R = d/R
         const inner = ((diameter - 2 * ffd) / diameter) * sinHalfAlpha;
         const correctedAlpha = alpha - 2 * Math.asin(Math.max(Math.min(inner, 1), -1)); // De hoek zoals gezien vanuit het midden
         return (correctedAlpha / (2 * Math.PI)) * Math.PI * diameter; // Booglengte
@@ -248,30 +244,27 @@
 
     // Bestaande functie voor het vinden van FFD op gebogen plaat
     function findCurvedFFDAlways(angleDeg, diameter, targetBeam) {
-        let low = 0.1, high = diameter * 2; // FFD kan tot 2*Diameter zijn (bron buiten pijp)
+        let low = 0.1, high = diameter * 2;
         let mid;
         let iterations = 0;
-        const maxIterations = 100; // Voorkomen van oneindige lussen
-        const tolerance = 0.01; // Gewenste precisie
+        const maxIterations = 100;
+        const tolerance = 0.01;
 
-        // Edge case: als bundelgrootte 0 is, FFD is oneindig
         if (targetBeam <= 0) return Infinity;
-        // Edge case: maximale mogelijke bundelgrootte is pi * diameter
-        if (targetBeam > Math.PI * diameter) return null; // Niet mogelijk
+        if (targetBeam > Math.PI * diameter) return null;
 
         while (high - low > tolerance && iterations < maxIterations) {
             mid = (low + high) / 2;
             const beam = curvedBeamSizeAlways(angleDeg, diameter, mid);
             if (beam > targetBeam) {
-                low = mid; // Zoek een grotere FFD voor een kleinere bundel
+                low = mid;
             } else {
-                high = mid; // Zoek een kleinere FFD voor een grotere bundel
+                high = mid;
             }
             iterations++;
         }
-        // Controleer of er een redelijke oplossing is gevonden
         if (iterations >= maxIterations -1 || Math.abs(curvedBeamSizeAlways(angleDeg, diameter, mid) - targetBeam) > tolerance * 2) {
-             return null; // Geen convergente oplossing of buiten bereik
+             return null;
         }
 
         return mid;
@@ -281,13 +274,12 @@
     /**
      * Berekent de hoek tussen de stralingsrichting (LP) en de normaal op de wand (OP).
      * @param {number} wallRadius - Straal van het vat (R).
-     * @param {number} sourceToCenterDist - Afstand van de bron tot het middelpunt van het vat (d).
+     * @param {number} sourceX - X-coördinaat van de lichtbron.
+     * @param {number} sourceY - Y-coördinaat van de lichtbron (meestal 0).
      * @param {number} pointAngleRad - Hoek van het punt op de wand t.o.v. de x-as (radiaal).
      * @returns {number} De hoek van instraling ten opzichte van de normaal op de wand (in radialen).
      */
-    function calculateWallAngle(wallRadius, sourceToCenterDist, pointAngleRad) {
-        const sourceX = sourceToCenterDist; // Bron is op (d, 0)
-        const sourceY = 0;
+    function calculateWallAngle(wallRadius, sourceX, sourceY, pointAngleRad) {
         const pointX = wallRadius * Math.cos(pointAngleRad);
         const pointY = wallRadius * Math.sin(pointAngleRad);
 
@@ -303,7 +295,7 @@
         const dotProduct = vecNormalX * vecBeamX + vecNormalY * vecBeamY;
 
         // Magnitudes
-        const magNormal = Math.sqrt(vecNormalX * vecNormalX + vecNormalY * vecNormalY); // Dit is R
+        const magNormal = wallRadius; // Dit is R
         const magBeam = Math.sqrt(vecBeamX * vecBeamX + vecBeamY * vecBeamY);
 
         if (magNormal === 0 || magBeam === 0) return Math.PI / 2; // Voorkom delen door nul
@@ -331,92 +323,102 @@
         // 1. Bereken de maximale toegestane hoek van instraling t.o.v. de normaal (theta_w_max)
         const maxThicknessIncreaseRatio = maxThicknessIncreasePerc / 100;
         const cosThetaWMax = 1 / (1 + maxThicknessIncreaseRatio);
-        // Clamp om Math.acos fouten te voorkomen (kan > 1 zijn door floating point)
         const thetaWMax = Math.acos(Math.max(-1, Math.min(1, cosThetaWMax))); // In radialen
 
-        // 2. Bepaal de afstand van de bron tot het middelpunt (d)
-        // Als FFD de afstand tot de dichtstbijzijnde wand is (FFD = R - d), dan d = R - FFD
-        // Als FFD de afstand tot de verste wand is (FFD = R + d), dan d = FFD - R
-        // De 'curvedBeamSizeAlways' formule handelt dit intern af via de 'inner' term.
-        // We moeten d hier expliciet bepalen voor calculateWallAngle
-        let sourceToCenterDist;
-        if (ffd <= R) { // Bron zit aan de 'FFD'-kant, dus dichterbij (FFD = R - d)
-             sourceToCenterDist = R - ffd; // d = R - FFD
-        } else { // Bron zit aan de 'verre' kant (FFD = R + d)
-             sourceToCenterDist = ffd - R; // d = FFD - R
+        // 2. Bepaal de absolute X-positie van de lichtbron
+        let sourceXPos;
+        let nominalCenterAngleForIteration; // De centrale hoek waar de bundel omheen symmetrisch is voor iteratie
+
+        // Bepaal de 'd' (afstand bron tot middelpunt)
+        let d;
+        if (ffd > R) { // Bundel naar de 'verre' wand (EN-8/ASME-B inside-out)
+            d = ffd - R;
+            sourceXPos = d; // Bron is op (d, 0)
+            nominalCenterAngleForIteration = Math.PI; // Midden van de belichte boog is op (-R, 0)
+        } else if (ffd < R) { // Bundel naar de 'dichte' wand (bron heel dicht bij wand)
+            d = R - ffd;
+            sourceXPos = -d; // Bron is op (-d, 0) om de belichte boog rond (R,0) te hebben
+            nominalCenterAngleForIteration = 0; // Midden van de belichte boog is op (R, 0)
+        } else { // ffd == R, bron ligt op de pijpwand zelf of op het middelpunt
+            // Dit is een randgeval. Als FFD=R, dan d=0 (bron in midden)
+            // of als de bron precies op de wand zit.
+            // Voor de formules hierboven moet d bekend zijn.
+            // Als FFD = R, dan is de bron effectief in het middelpunt.
+            d = 0;
+            sourceXPos = 0;
+            nominalCenterAngleForIteration = 0; // Of elke hoek, want is symmetrisch
+            // Als d=0, dan is de hoek altijd 0. Dit is een makkelijk geval.
+            // Als d=0, cosThetaWMax moet dan 1 zijn (geen toename)
+            if (maxThicknessIncreasePerc > 0) return null; // Geen toename toegestaan als d=0, tenzij maxincrease = 0
+            if (cosThetaWMax < 0.99999) return null; // Als er een toename is toegestaan, maar d=0 dan is de hele bundel nuttig
+            return curvedBeamSizeAlways(angleDeg, diameter, ffd); // De hele bundel is nuttig
         }
 
-        // De bron ligt nu op (sourceToCenterDist, 0) of (-sourceToCenterDist, 0)
-        // Voor de consistentie met onze atan2 / asin berekeningen, nemen we aan dat de bron op (d,0) ligt.
-        // De 'middellijn' van de bundel is afhankelijk van de FFD.
-        // Als FFD > R (bron aan de 'verre' kant), dan is de middellijn naar -x gericht (hoek PI)
-        // Als FFD < R (bron aan de 'dichte' kant), dan is de middellijn naar +x gericht (hoek 0)
+        // Als d > R (bron buiten de pijp) dan werkt deze specifieke inside-out formule niet.
+        // De context is 'van binnen naar buiten'.
+        if (d > R + 0.001) { // Kleine tolerantie
+            return null; // Bron buiten de pijp, valt buiten dit model
+        }
 
-        // 3. Vind de centrale hoek die het nuttige bereik omspant
-        // Dit doen we door numeriek te zoeken naar de hoeken waar calculateWallAngle gelijk is aan thetaWMax.
-        // De hoofd-hoek van de bundel ligt meestal rond 0 of PI.
-        // We zoeken de uiterste hoeken (in radialen) die nog voldoen aan de eis.
-        let usefulStartAngle = null;
-        let usefulEndAngle = null;
-        let totalUsefulAngleRad = 0;
 
-        // Stapgrootte voor het itereren
-        const angleStep = 0.001 * Math.PI / 180; // 0.001 graden in radialen
+        // De broncoördinaten die we aan calculateWallAngle doorgeven:
+        const source_x = sourceXPos;
+        const source_y = 0; // Bron ligt op de X-as
 
-        // We zoeken in het bereik van de totale belichte bundel.
-        // Eerst bepalen we de start- en eindhoeken van de totale belichte bundel.
+        // 3. Bepaal het bereik van de totale belichte bundel (hoeken)
         const alphaRad = angleDeg * Math.PI / 180; // Bundelhoek in radialen
-
-        // Bereken de 'inner' term die de hoek van de stralen t.o.v. het midden bepaalt.
         const sinHalfAlpha = Math.sin(alphaRad / 2);
         const innerTerm = ((diameter - 2 * ffd) / diameter) * sinHalfAlpha;
         const correctedAlphaTotal = alphaRad - 2 * Math.asin(Math.max(Math.min(innerTerm, 1), -1));
 
-        // Startpunt van de totale belichte bundel (relatief t.o.v. de 'middellijn' die door de bron en middelpunt gaat)
-        // De middellijn van de bundel gaat door (sourceToCenterDist, 0) en is gericht naar (0,0) of (-R,0) of (R,0).
-        // Als FFD > R, bundel naar -x. Middenpunt van de boog is bij (-R,0). Start/eind relative to -PI.
-        // Als FFD < R, bundel naar +x. Middenpunt van de boog is bij (R,0). Start/eind relative to 0.
-
-        // De FFD logica in `curvedBeamSizeAlways` impliceert dat:
-        // Als ffd < R (bron aan 'dichtbij' kant, 60cm), dan is de bundel naar de positieve X-as gericht.
-        // De centrale hoek is dan symmetrisch rond 0 rad (0 graden).
-        let nominalCenterAngle = 0; // Voor FFD < R
-        if (ffd > R) { // Bron aan 'verre' kant, bundel naar negatieve X-as gericht
-            nominalCenterAngle = Math.PI; // Voor FFD > R
-        }
-
         const halfTotalAngle = correctedAlphaTotal / 2;
-        const totalBeamStartRad = nominalCenterAngle - halfTotalAngle;
-        const totalBeamEndRad = nominalCenterAngle + halfTotalAngle;
+        // Start- en eindhoeken van de totale belichte bundel ten opzichte van de x-as
+        // De belichte boog is gecentreerd rond nominalCenterAngleForIteration
+        let totalBeamStartRad = nominalCenterAngleForIteration - halfTotalAngle;
+        let totalBeamEndRad = nominalCenterAngleForIteration + halfTotalAngle;
 
-        // Nu itereren we door dit bereik om de nuttige hoek te vinden
-        for (let angle = totalBeamStartRad; angle <= totalBeamEndRad; angle += angleStep) {
-            const currentWallAngle = calculateWallAngle(R, sourceToCenterDist, angle);
+        // 4. Zoek de grenzen van het nuttige bereik
+        let usefulStartAngle = null;
+        let usefulEndAngle = null;
+        const angleStep = 0.001 * Math.PI / 180; // Kleine stap voor precisie
 
-            if (currentWallAngle <= thetaWMax) {
+        // Gebruik een kleine correctie voor de iteratie om mogelijke afrondingsfouten bij de grens te voorkomen
+        // Begin net iets voor totalBeamStartRad en eindig net iets na totalBeamEndRad
+        const iterationStart = totalBeamStartRad - angleStep / 2;
+        const iterationEnd = totalBeamEndRad + angleStep / 2;
+
+        for (let angle = iterationStart; angle <= iterationEnd; angle += angleStep) {
+            // Normaliseer de hoek voor de calculateWallAngle functie (optioneel, maar maakt het consistenter)
+            const normalizedAngle = (angle + 2 * Math.PI) % (2 * Math.PI);
+            const currentWallAngle = calculateWallAngle(R, source_x, source_y, normalizedAngle);
+
+            // Als de huidige hoek van de straling op de wand binnen de toelaatbare limiet valt
+            if (currentWallAngle <= thetaWMax + 0.0001) { // Kleine tolerantie voor floating point vergelijking
                 if (usefulStartAngle === null) {
-                    usefulStartAngle = angle;
+                    usefulStartAngle = angle; // Dit is de eerste keer dat we in het nuttige bereik komen
                 }
-                usefulEndAngle = angle;
+                usefulEndAngle = angle; // Update altijd de eindhoek zolang we in het bereik zijn
             } else if (usefulStartAngle !== null) {
-                // We zijn buiten het nuttige bereik gekomen
+                // We zijn buiten het nuttige bereik gekomen na erin te zijn geweest
                 break;
             }
         }
 
-        if (usefulStartAngle === null || usefulEndAngle === null) {
-            return null; // Geen nuttig bereik gevonden dat voldoet
+        if (usefulStartAngle === null || usefulEndAngle === null || usefulStartAngle > usefulEndAngle) {
+            return null; // Geen nuttig bereik gevonden dat voldoet aan de eisen
         }
 
-        totalUsefulAngleRad = usefulEndAngle - usefulStartAngle;
-        // Zorg ervoor dat de hoek positief is en binnen [0, 2PI]
-        totalUsefulAngleRad = Math.abs(totalUsefulAngleRad);
-        if (totalUsefulAngleRad > 2 * Math.PI) { // Kan gebeuren door afronding of als 0 in het midden van het interval ligt
-            totalUsefulAngleRad = 2 * Math.PI - totalUsefulAngleRad;
-        }
+        const totalUsefulAngleRad = usefulEndAngle - usefulStartAngle;
 
-        // 4. Bereken het nuttige bereik (booglengte)
+        // 5. Bereken het nuttige bereik (booglengte)
         const usefulBeamLength = R * totalUsefulAngleRad;
+
+        // Extra controle: het nuttige bereik kan nooit groter zijn dan de totale belichte lengte
+        const totalBeamLength = curvedBeamSizeAlways(angleDeg, diameter, ffd);
+        if (usefulBeamLength > totalBeamLength + 0.01) { // Kleine tolerantie voor floating point
+            // Dit kan voorkomen als thetaWMax heel groot is (bijna pi/2) en de hele bundel nuttig is
+            return totalBeamLength;
+        }
 
         return usefulBeamLength;
     }
