--- a/handigelinks.html
+++ b/handigelinks.html
@@ -132,6 +132,7 @@
         <li><a href="https://applus-textiles.promonline.nl/base/public/login?returnURL=%2Fshop%2Fhome" class= "link3"><i class="fa-solid fa-shirt"></i> Kleding</a></li>
         <li><a href="https://www.vdp.com/NL/Catalogues/viewcatalog/4640/" class= "link4"><i class="fa-solid fa-helmet-safety"></i>Werkkleding</a></li>
         <li><a href="https://applusglobal.sharepoint.com/sites/energyandindustry-neur/BUA-NL/HRNL/Default.aspx?RootFolder=%2Fsites%2Fenergyandindustry%2Dneur%2FBUA%2DNL%2FHRNL%2FInformatie%20voor%20medewerkers%2F1%2E%20Cao%20Metalektro%20en%20Personeelsgids%20Applus%2B%20Nederland%20%2D%20CLA%20Metalektro%20and%20Personnel%20Handbook%20Applus%2B%20Netherlands&FolderCTID=0x01200083B4E7B7DAB8D541BE7C94C1B27EABC0&View=%7BAA8CB7AA%2DE10C%2D4402%2D8596%2DE6CF0558AAB6%7D" class= "link2"><i class="fa-solid fa-book-open"></i>Blauwe boekje</a></li>
+        <li><a href="https://applus.egencia.nl" class= "link3"><i class="fa-solid fa-suitcase"></i>Hotel (Reizen)</a></li>
     </ul>
 
 </body>
