--- a/test.html
+++ b/test.html
@@ -30,6 +30,25 @@
             margin-top: 0;
         }
 
+        .submit-btn {
+            background-color: #F5DF4D;
+            color: black;
+            padding: 15px 30px;
+            font-size: 18px;
+            border: none;
+            border-radius: 10px;
+            cursor: pointer;
+            text-align: center;
+            display: block;
+            margin: 20px auto;
+            width: 100%;
+            max-width: 400px;
+        }
+
+        .submit-btn:hover {
+            background-color: #FFD700;
+        }
+
         /* Stijlen voor de modals (pop-ups) */
         .modal {
             display: none;
