--- a/MinFFD.html
+++ b/MinFFD.html
@@ -14,28 +14,119 @@
             margin: 0;
         }
 
-        button {
-            background-color: #F5DF4D;
+        /* De stijlen voor de 'Bereken FFD' knop zijn verwijderd en moeten nu in styles.css staan */
+
+        /* Stijlen voor de modal knop (blijven hier) */
+        .info-btn {
+            background-color: #ddd;
             color: black;
-            font-size: 18px;
-            padding: 15px 30px;
+            padding: 5px 12px;
+            font-size: 16px;
+            border-radius: 50%;
             border: none;
-            border-radius: 8px;
             cursor: pointer;
-            display: inline-block;
-            margin-top: 20px;
-            width: 60%;
+            margin: 5px;
+            width: auto;
+            margin-top: 0;
         }
 
-        button:hover {
-            background-color: #e4c233;
+        .submit-btn {
+            background-color: #F5DF4D;
+            color: black;
+            padding: 15px 30px;
+            font-size: 18px;
+            border: none;
+            border-radius: 10px;
+            cursor: pointer;
+            text-align: center;
+            display: block;
+            margin: 20px auto;
+            width: 100%;
+            max-width: 400px;
         }
+
+        .submit-btn:hover {
+            background-color: #FFD700;
+        }
+
+        /* Stijlen voor de modals (pop-ups) */
+        .modal {
+            display: none;
+            position: fixed;
+            z-index: 1;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            overflow: auto;
+            background-color: rgb(0,0,0);
+            background-color: rgba(0,0,0,0.4);
+        }
+        .modal-content {
+            background-color: #fefefe;
+            margin: 15% auto;
+            padding: 20px;
+            border: 1px solid #888;
+            width: 80%;
+            max-width: 600px;
+        }
+        .close {
+            color: #aaa;
+            float: right;
+            font-size: 28px;
+            font-weight: bold;
+        }
+        .close:hover,
+        .close:focus {
+            color: black;
+            text-decoration: none;
+            cursor: pointer;
+        }
+
+        /* AANGEPAST: Kleinere gap tussen de invoervelden */
+        #ffdForm {
+            max-width: 600px;
+            margin: 20px auto;
+            padding: 20px;
+            display: flex;
+            flex-direction: column;
+            gap: 5px; /* De ruimte tussen de elementen */
+            align-items: center;
+        }
+
+        #ffdForm > * {
+            width: 100%;
+            max-width: 400px;
+        }
+
+        #ffdForm input[type="number"], #ffdForm select {
+            width: 100%;
+            padding: 8px;
+            box-sizing: border-box;
+            /* Marges geminimaliseerd */
+            margin-top: 2px;
+            margin-bottom: 2px; 
+        }
+
+        #ffdForm label {
+            display: block;
+            margin-bottom: 2px; /* Marge geminimaliseerd */
+            font-weight: bold;
+        }
+        
+        /* Zorg ervoor dat de knop onderaan ook het submit-btn design overneemt */
+        #ffdForm .submit-btn {
+            margin-top: 15px; /* Ruimte boven de knop */
+        }
+
     </style>
 </head>
 <body>
     <h1 style="color: #F5DF4D; text-align: center;">Minimale FFD</h1>
 
-    <button class="info-btn" onclick="openModal('myModal')">i</button>
+    <div style="text-align: center;">
+        <button class="info-btn" onclick="openModal('myModal')">i</button>
+    </div>
 
     <div id="myModal" class="modal">
         <div class="modal-content">
@@ -50,10 +141,16 @@
 
     <form id="ffdForm">
         <label for="ofa">Object Film Afstand (OFA):</label>
-        <input type="number" id="ofa" name="ofa" step="0.01" required><br><br>
+        <input type="number" id="ofa" name="ofa" step="0.01" required>
 
-        <label for="brongrootte">Brongrootte:</label>
-        <input type="number" id="brongrootte" name="brongrootte" step="0.01" required><br><br>
+        <label for="brongrootteInput">Brongrootte in mm:</label>
+        <input type="number" id="brongrootteInput" name="brongrootte" list="bronKeuzes" step="0.01" required placeholder="Kies of vul in (mm)">
+
+        <datalist id="bronKeuzes">
+            <option value="2.5" label="Balteau (2.5 mm)"></option>
+            <option value="3" label="Yxlon (3 mm)"></option>
+            <option value="1" label="Yxlon Smart (1 mm)"></option>
+        </datalist>
 
         <label for="standaard">Kies een standaard:</label>
         <select id="standaard" name="standaard" required>
@@ -61,7 +158,7 @@
             <option value="1">EN-klasse A</option>
             <option value="2">EN-klasse B</option>
             <option value="3">ASME</option>
-        </select><br><br>
+        </select>
 
         <div id="extraOpties" style="display:none;">
             <label for="optie">Centraal of Excentrisch:</label>
@@ -69,23 +166,23 @@
                 <option value="">Nee</option>
                 <option value="1">Centraal</option>
                 <option value="2">Excentrisch</option>
-            </select><br><br>
+            </select>
         </div>
 
         <div id="diameterInput" style="display:none;">
             <label for="diameter">Diameter in mm:</label>
-            <input type="number" id="diameter" name="diameter" step="0.01"><br><br>
+            <input type="number" id="diameter" name="diameter" step="0.01">
         </div>
 
         <div id="wanddikteInput" style="display:none;">
             <label for="wt">Wanddikte (wt) in mm:</label>
-            <input type="number" id="wt" name="wt" step="0.01"><br><br>
+            <input type="number" id="wt" name="wt" step="0.01">
         </div>
 
-        <button type="button" onclick="berekenFFD(); scrollToAnswer()">Bereken FFD</button>
+        <button type="button" class="submit-btn" onclick="berekenFFD(); scrollToAnswer()">Bereken FFD</button>
     </form>
 
-    <p id="output" style="color: #F5DF4D;"></p>
+    <p id="output" style="color: #F5DF4D; text-align: center;"></p>
 
     <script>
         const standaardSelect = document.getElementById("standaard");
@@ -93,6 +190,44 @@
         const wanddikteDiv = document.getElementById("wanddikteInput");
         const optieSelect = document.getElementById("optie");
         const diameterDiv = document.getElementById("diameterInput");
+
+        const brongrootteInput = document.getElementById("brongrootteInput");
+        const bronKeuzesDatalist = document.getElementById("bronKeuzes");
+
+
+        async function laadBronnenCSV() {
+            try {
+                const response = await fetch('bronnen.csv');
+                if (!response.ok) {
+                    throw new Error(`Fout bij laden CSV: ${response.statusText}`);
+                }
+                const csvText = await response.text();
+
+                const rows = csvText.trim().split('\n').slice(1);
+
+                rows.forEach(row => {
+                    const columns = row.split(',');
+
+                    if (columns.length >= 5) {
+                        const bronNaam = columns[0].trim();
+                        const bronGrootte = columns[4].trim();
+
+                        if (bronNaam && bronGrootte) {
+                            const option = document.createElement('option');
+                            option.value = bronGrootte;
+                            option.label = `${bronNaam} (${bronGrootte} mm)`;
+                            bronKeuzesDatalist.appendChild(option);
+                        }
+                    }
+                });
+
+                brongrootteInput.placeholder = "Kies of vul in (mm)";
+            } catch (error) {
+                console.error("Kon bronnen.csv niet laden of verwerken. Zorg ervoor dat het bestand op de juiste plek staat en toegankelijk is (fout:", error, ")");
+                brongrootteInput.placeholder = "Geen dynamische bronnen geladen";
+            }
+        }
+
 
         standaardSelect.addEventListener("change", function () {
             if (standaardSelect.value === '1' || standaardSelect.value === '2' || standaardSelect.value === '3') {
@@ -124,7 +259,7 @@
 
         function berekenFFD() {
             let ofa = parseFloat(document.getElementById("ofa").value);
-            let brongrootte = parseFloat(document.getElementById("brongrootte").value);
+            let brongrootte = parseFloat(document.getElementById("brongrootteInput").value);
             let keuze = document.getElementById("standaard").value;
             let optie = document.getElementById("optie").value;
             let diameter = parseFloat(document.getElementById("diameter").value);
@@ -229,6 +364,11 @@
         function closeModal(id) {
             document.getElementById(id).style.display = "none";
         }
+
+        document.addEventListener('DOMContentLoaded', function() {
+            laadBronnenCSV();
+        });
+
     </script>
 </body>
 </html>
